--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -38,5 +39,8 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "resolutions": {
+    "eslint-loader": "2.1.2"
+  }
 }
